fixed line number and code alignment - I think the problem was Unicode chars or boldness or some combo

--- a/app/assets/stylesheets/whurl_engine/whurl.css.scss
+++ b/app/assets/stylesheets/whurl_engine/whurl.css.scss
@@ -34,6 +34,7 @@ $highlight: #F1CB31;
 .whurl {
   td.line_numbers pre, td.code pre, td.code span {
     font-family: monospace;
+    line-height: 20px;
   }
 
   table.CodeRay {
